# BharatSetu

./: .env.example  .gitignore  PROGRESS.md  README.md  dev.sh  dump.rdb  mix.exs
_dev_logs/: bridge_2026-05-11.jsonl  bridge_2026-05-12.jsonl  bridge_2026-05-15.jsonl  bridge_2026-05-16.jsonl
apps/bharat_adapters/: mix.exs
apps/bharat_core/: mix.exs
apps/bharat_data/: mix.exs
apps/bharat_relayer/: mix.exs
apps/bharat_web/: mix.exs
config/: config.exs  dev.exs.example
contracts/: .env.example  foundry.toml
contracts/script/: Deploy.s.sol  DeployPOCv2.s.sol  DeployTestToken.s.sol
contracts/src/: EthVault.sol  LockBridge.sol  MintBridge.sol  NFTVault.sol  TestToken.sol
contracts/src/utils/: ERC20.sol  Ownable.sol
contracts/test/: LockBridge.t.sol  MintBridge.t.sol
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  providers.tsx
frontend/app/bridge/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/history/: page.tsx
frontend/lib/: api.ts  siwe.ts  socket.ts  wagmi.ts
solana/: Anchor.toml  Cargo.toml  deploy.sh  rust-toolchain.toml
solana/programs/lock_vault/: Cargo.toml
solana/programs/lock_vault/src/: lib.rs
solana/programs/mint_bridge/: Cargo.toml
solana/programs/nft_mint_bridge/: Cargo.toml
solana/programs/nft_mint_bridge/src/: lib.rs
solana/scripts/: airdrop.js  convert_key.js  find_mint.js  init_mint_bridge.js  mint_wrapped.js  package-lock.json  package.json  relayer.json
specs/: eth-to-sol-flow.md
(+85 files in other folders)
